# litu_raven

./: .gitignore  LICENSE  README.md
ESP/raven/: CMakeLists.txt  Makefile  README.md  project_map.json
ESP/raven/components/raven_activities/: CMakeLists.txt
ESP/raven/components/raven_core/: CMakeLists.txt
ESP/raven/components/raven_events/: CMakeLists.txt
ESP/raven/components/raven_gateways/: CMakeLists.txt
ESP/raven/components/raven_platform/: CMakeLists.txt
ESP/raven/components/raven_services/: CMakeLists.txt
ESP/raven/components/raven_services/include/raven_services/: base_service.hpp  navigation_messages.hpp  navigation_service.hpp  pilot_input_service.hpp  pilot_messages.hpp  raven_services.hpp  telemetry_encoder.hpp  telemetry_messages.hpp  telemetry_service.hpp
ESP/raven/components/raven_services/src/: navigation_service.cpp  pilot_input_service.cpp  raven_services.cpp  telemetry_service.cpp
ESP/raven/components/raven_state/: CMakeLists.txt
ESP/raven/docs/: architecture.md
ESP/raven/main/: CMakeLists.txt  app_main.cpp  gateway_bootstrap.cpp  gateway_bootstrap.hpp  idf_component.yml
IOS/: README.md  project_map.json
IOS/docs/: architecture_note_draft.md
IOS/litu/: lituApp.swift
IOS/litu.xcodeproj/: project.pbxproj
IOS/litu/App/: LocalLLMView.swift  RootView.swift  SoccerPenaltyView.swift  TCPNetworkingView.swift
IOS/litu/Engine/LLMBasic/: ChatModel.swift  DeviceStat.swift  HeaderView.swift  LLMEvaluator.swift  OutputView.swift  README.md
IOS/litu/Engine/MiniWorldService/: LevelModel.swift  LevelPlannerService.swift  (+3 more)
(+52 files in other folders)
